--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yahoo-stock-prices": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
